--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "desktop-idle": "^1.3.0"
+    "desktop-idle": "^1.3.0",
+    "forever": "^2.0.0",
+    "forever-service": "^0.5.11",
+    "node-notifier": "^7.0.0",
+    "shelljs": "^0.8.3"
   }
 }
