--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@meetfranz/electron-notification-state": "^1.0.0",
     "desktop-idle": "^1.3.0",
     "forever": "^2.0.0",
-    "forever-service": "^0.5.11",
     "node-notifier": "^7.0.0",
-    "shelljs": "^0.8.3"
+    "shelljs": "^0.8.3",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2"
   }
 }
